<resources>
    <string name="app_name">Calculator</string>
    <string name="_number_one">1</string>
    <string name="_number_two">2</string>
    <string name="_number_three">3</string>
    <string name="_number_four">4</string>
    <string name="_number_five">5</string>
    <string name="_number_six">6</string>
    <string name="_number_seven">7</string>
    <string name="_number_eight">8</string>
    <string name="_number_nine">9</string>
    <string name="_number_zero">0</string>
    <string name="_number_C">C</string>
    <string name="_divide">/</string>
    <string name="_multiplication">*</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_equally">=</string>
     <string name="_activity2_theme_purple">purple</string>
    <string name="_activity2_theme_red">red</string>
    <string name="_button_back">back</string>

</resources>