<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/output"
            android:layout_height="70dp"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal"
            android:background="@color/white"
            android:text=""
            android:textColor="@color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/buttonDivide"
            style="@style/Theme.Calculator.Button"
            android:layout_column="3"
            android:text="/" />

        <Button
            android:id="@+id/buttonSeven"
            style="@style/Theme.Calculator.Button"
            android:text="@string/_number_seven" />

        <Button
            android:id="@+id/buttonEight"
            style="@style/Theme.Calculator.Button"
            android:text="@string/_number_eight" />

        <Button
            android:id="@+id/buttonNine"
            style="@style/Theme.Calculator.Button"
            android:text="@string/_number_nine" />

        <Button
            android:id="@+id/buttonMultiplication"
            style="@style/Theme.Calculator.Button"
            android:text="@string/_multiplication" />

        <Button
            android:id="@+id/buttonFour"
            style="@style/Theme.Calculator.Button"
            android:text="@string/_number_four" />

        <Button
            android:id="@+id/buttonFive"
            style="@style/Theme.Calculator.Button"
            android:text="@string/_number_five" />

        <Button
            android:id="@+id/buttonSix"
            style="@style/Theme.Calculator.Button"
            android:text="@string/_number_six" />

        <Button
            android:id="@+id/buttonMinus"
            style="@style/Theme.Calculator.Button"
            android:text="@string/_minus" />

        <Button
            android:id="@+id/buttonOne"
            style="@style/Theme.Calculator.Button"
            android:text="@string/_number_one" />

        <Button
            android:id="@+id/buttonTwo"
            style="@style/Theme.Calculator.Button"
            android:text="@string/_number_two" />

        <Button
            android:id="@+id/buttonThree"
            style="@style/Theme.Calculator.Button"
            android:text="@string/_number_three" />

        <Button
            android:id="@+id/buttonPlus"
            style="@style/Theme.Calculator.Button"
            android:text="@string/_plus" />

        <Button
            android:id="@+id/buttonZero"
            style="@style/Theme.Calculator.Button"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/_number_zero" />

        <Button
            android:id="@+id/buttonC"
            style="@style/Theme.Calculator.Button"
            android:text="C" />

        <Button
            android:id="@+id/buttonEqually"
            style="@style/Theme.Calculator.Button"
            android:text="@string/_equally" />
    </GridLayout>
</FrameLayout>